--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,21 @@
 header {
     margin-top: 100px;
 }
+
+h1 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+h3 {
+    margin-left: 5%; 
+}
+img {
+    height: 200px;
+}
+p{
+    text-align: center;
+}
+
 main {
     margin: 100px 0;
     background-color: #f9f9f9;
