--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,3 @@
-.debug .container {
-    height: 100%;
-    min-height: 100px;
-    border: 1px solid black;
-}
-
-.debug [class *="col-"] {
-    height: 100%;
-    min-height: 100px;
-    background-color: red;
-    border: 1px solid black;
-}
-
 .blue-circle img {
     background-color: #428bca;
     border-radius: 50%;
@@ -45,3 +32,25 @@ footer .container {
     margin: 100px auto;
     background-color: #f9f9f9;
 }
+
+@media all and (max-width: 767px) {
+    img{
+        width: 100%;
+        height: auto;
+    }
+
+    .container {
+        margin-top: 20px;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+    img{
+        height: 150px;
+    }
+
+    .container {
+        margin-top: 20px;
+    }
+}
+    
